Test con H2 y quote con Async